--- a/store/blocks/page/home.jsonc
+++ b/store/blocks/page/home.jsonc
@@ -1,7 +1,12 @@
 {
-  "store.home": { 
+  "store.home": {
     "blocks": [
       "list-context.image-list#mainPage"
     ]
-  }  
+  },
+  "flex-layout.row#lateralSpacer": {
+    "props": {
+      "width": 150
+    }
+  }
 }
