--- a/store/blocks/product.jsonc
+++ b/store/blocks/product.jsonc
@@ -1,7 +1,34 @@
 {
   "store.product": {
     "children": [
-      
+      "flex-layout.row#producto"
     ]
+  },
+  "flex-layout.row#producto": {
+    "children": [
+      "product-images",
+      "product-name",
+      "product-price"
+    ],
+    "props": {
+      "blockClass": "detalhesproduto"
+    }
+  },
+  "product-name": {
+    "props": {
+      "showSku": true,
+      "showBrandName": true
+    }
+  },
+  "product-price": {
+    "props": {
+      "showListPrice": true,
+      "showLabels": false
+    }
+  },
+  "product-images": {
+    "props": {
+      "displayThumbnailsArrows": true
+    }
   }
 }
